<resources tools:locale="en-US" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Almond</string>
    <string name="title_activity_web_ui">Almond</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_chat">Clear history</string>
    <string name="action_train">Train</string>
    <string name="title_activity_main">Almond</string>

    <string name="chat_tab">Chat</string>
    <string name="mystuff_tab">My Goods</string>
    <string name="myrules_tab">My Rules</string>
    <string name="button_configure_text">Configure</string>
    <string name="my_devices_title">My Devices</string>
    <string name="my_accounts_title">My Accounts</string>
    <string name="btn_create_device_title">Configure new device…</string>
    <string name="btn_create_account_title">Add new account…</string>
    <string name="create_device_title">Configure Device</string>
    <string name="create_account_title">Add New Account</string>
    <string name="create_datasource_title">Enable New Data Source</string>
    <string name="btn_delete_device">Delete device</string>
    <string name="btn_delete_account">Forget account</string>
    <string name="btn_delete_datasource">Disable data source</string>
    <string name="device_available">The device is available and working.</string>
    <string name="device_unavailable">The device is not available. It might be powered off or disconnected.</string>
    <string name="device_availability_unknown">It was not possible to verify if the device is available. Please check it is powered on and correctly configured.</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_choose_location">Pick a location…</string>
    <string name="btn_choose_picture">Choose…</string><!-- picture is implied by the context -->
    <string name="audio_permission_needed">You must allow Almond to record audio in order to use voice interaction</string>
    <string name="speak_now">Speak now…</string>
    <string name="btn_choose_contact">Choose a contact…</string>
    <string name="btn_upgrade">Update</string>
    <string name="device_version">Version: %d</string>
    <string name="pref_cloud_sync_title">Enable cloud sync</string>
    <string name="pref_developer_key_title">Developer Key</string>
    <string name="cloud_sync_enabled">Cloud sync is enabled</string>
    <string name="cloud_sync_disabled">Cloud sync is disabled. Click to enable…</string>
    <string name="no_developer_key">You don\'t have a developer key. Sign in to Thingpedia to obtain one.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pref_username_title">User name</string>
    <string name="btn_share">Share…</string>
    <string name="btn_download">Download</string>
    <string name="toast_downloaded">Saved to gallery</string>
    <string name="toast_download_failed">Failed to download picture</string>
    <string name="download_permission_needed">Almond must be able to write to the SD card to download this picture</string>
    <string name="btn_never_mind">Start over</string>
    <string name="btn_assistant_voice">Use voice</string>
    <string name="never_mind">Cancel</string>
    <string name="sabrina_says_something">Almond says something</string>
    <string name="content_hidden">Content hidden for privacy</string>
    <string name="sabrina_says">Almond says</string>
    <string name="sabrina_sends_picture">Almond sends a picture</string>
    <string name="sabrina_sends_button">Almond sends a button</string>
    <string name="sabrina_sends_link">Almond sends a link</string>
    <string name="sabrina_says_dotdotdot">Almond says…</string>
    <string name="intro_text">What you can do with Almond</string>
    <string name="get_started">Get started</string>
    <string name="example_commands">Example commands</string>
    <string name="show_landing_page">Always show landing pages </string>
    <string name="make_rule">Make your own rule</string>
    <string name="suggestion_nest">Nest</string>
    <string name="suggestion_twitter">Twitter</string>
    <string name="suggestion_news">WA Post</string>
    <string name="suggestion_gmail">Gmail</string>
    <string name="suggestion_discover">Search devices</string>
    <string name="suggestion_help">Help</string>
    <string name="cheatsheet">Cheatsheet</string>
    <string name="btn_cancel">Cancel</string>
    <string name="action_help">Help</string>
    <string name="input_hint">Write your command or answer here</string>
    <string name="mypermissions_tab">My Permissions</string>
    <string name="no_commands">This device has no example commands.</string>
    <string name="device_up_to_date">Already up to date</string>
    <string name="device_update_ok">Update succeed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="pref_store_log_title">Allow passive training</string>


    <string-array name="sabrina_highlights">
        <item>Try: Wake me up every morning at 8 am with my playlist my favorite</item>
        <item>Try: search someone like you on youtube and play on my tv</item>
        <item>Try: notify me if I get a Gmail with subject containing deadline</item>
        <item>Try: if I post a picture on Instagram then post it on Twitter </item>
        <item>Click the \"help\" button on the top and let us help you</item>
    </string-array>

    <string-array name="sabrina_highlights_description">
        <item>Tired of the same alarm every morning?</item>
        <item>Tired of typing on TV?</item>
        <item>Too many notifications?</item>
        <item>Too many social accounts?</item>
        <item>Still don\'t know what to do?</item>
    </string-array>
</resources>
