<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.stanford.thingengine.engine.ui.MainActivity">
    <item
        android:id="@+id/action_help"
        android:orderInCategory="0"
        android:menuCategory="alternative"
        android:showAsAction="always"
        android:title="@string/action_help"
        />
    <item
        android:id="@+id/action_train"
        android:orderInCategory="1"
        android:menuCategory="alternative"
        android:showAsAction="always"
        android:title="@string/action_train"
        />
    <item
        android:id="@+id/my_stuff"
        android:orderInCategory="2"
        android:menuCategory="alternative"
        android:showAsAction="never"
        android:title="@string/mystuff_tab"
        />
    <item
        android:id="@+id/my_rules"
        android:orderInCategory="3"
        android:menuCategory="alternative"
        android:showAsAction="never"
        android:title="@string/myrules_tab"
        />
    <item
        android:id="@+id/cheatsheet"
        android:orderInCategory="4"
        android:menuCategory="alternative"
        android:showAsAction="never"
        android:title="@string/cheatsheet"
        />
    <item
        android:id="@+id/action_clear_chat"
        android:orderInCategory="5"
        android:menuCategory="alternative"
        android:showAsAction="never"
        android:title="@string/action_clear_chat" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:menuCategory="secondary"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
