<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/chat_list"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:dividerPadding="@dimen/activity_vertical_margin"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"
        android:scrollingCache="true"
        android:smoothScrollbar="false"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/suggestion_bar"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/suggestions">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/suggestion_help"
                android:text="@string/suggestion_help">
            </Button>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/suggestion_nevermind"
                android:text="@string/never_mind"
                android:visibility="gone">
            </Button>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/suggestion_cheatsheet"
                android:text="@string/cheatsheet">
            </Button>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/suggestion_twitter"
                android:text="@string/suggestion_twitter">
            </Button>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/suggestion_gmail"
                android:text="@string/suggestion_gmail">
            </Button>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/suggestion_nest"
                android:text="@string/suggestion_nest">
            </Button>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/suggestion_news"
                android:text="@string/suggestion_news">
            </Button>
            <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/suggestion_discover"
            android:text="@string/suggestion_discover">
        </Button>

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_bar"
        android:orientation="horizontal">
        <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/assistant_input"
            android:minLines="1"
            android:maxLines="1"
            android:enabled="true"
            android:imeOptions="actionSend"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleSmall"
            android:id="@+id/assistant_progress"
            android:padding="5dp"
            android:indeterminate="false"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/stanford_cardinal"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_assistant_voice"
            android:src="@drawable/ic_mic_black"
            android:tint="@color/stanford_cardinal"
            android:clickable="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:contentDescription="@string/btn_assistant_voice" />
    </LinearLayout>
</LinearLayout>
